--- a/src/.env
+++ b/src/.env
@@ -1,11 +1,11 @@
-RAZORPAY_KEY_ID=rzp_test_xxx
-RAZORPAY_KEY_SECRET=xxxxxxx
-VITE_RAZORPAY_KEY_ID=rzp_test_xxx
-VITE_API_URL='http://localhost:4000'
-psql 'postgresql://neondb_owner:npg_l1orXOxDT4PF@ep-old-recipe-a8lo8shq-pooler.eastus2.azure.neon.tech/neondb?sslmode=require&channel_binding=require'
-PGHOST='ep-old-recipe-a8lo8shq-pooler.eastus2.azure.neon.tech'
-PGDATABASE='neondb'
-PGUSER='neondb_owner'
-PGPASSWORD='npg_l1orXOxDT4PF'
+API_URL='http://localhost:4000'
 PGPORT=5432
-DATABASE_URL=`postgresql://${PGUSER}:${PGPASSWORD}@${PGHOST}/${PGDATABASE}?sslmode=require`
+
+GOOGLE_CLIENT_ID='1007479511358-nctc1hf187sb9cf5u5n8ihupihbed9nu.apps.googleusercontent.com'
+GOOGLE_CLIENT_SECRET= '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'
+GOOGLE_REDIRECT_URI='http://localhost:3000'
+
+PORT=4000
+
+VITE_API_URL='http://localhost:4000'
+VITE_GOOGLE_CLIENT_ID=1007479511358-nctc1hf187sb9cf5u5n8ihupihbed9nu.apps.googleusercontent.com
