--- a/src/.env
+++ b/src/.env
@@ -1,11 +1,12 @@
-API_URL='http://localhost:4000'
+API_URL='http://localhost:5173'
 PGPORT=5432
 
 GOOGLE_CLIENT_ID='1007479511358-nctc1hf187sb9cf5u5n8ihupihbed9nu.apps.googleusercontent.com'
 GOOGLE_CLIENT_SECRET= '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'
-GOOGLE_REDIRECT_URI='http://localhost:3000'
+GOOGLE_REDIRECT_URI='http://localhost:4000/auth/google/callback'
 
 PORT=4000
+SERVER_ROOT='http://localhost:4000'
 
 VITE_API_URL='http://localhost:4000'
 VITE_GOOGLE_CLIENT_ID=1007479511358-nctc1hf187sb9cf5u5n8ihupihbed9nu.apps.googleusercontent.com
