--- a/src/.env
+++ b/src/.env
@@ -14,3 +14,5 @@ VITE_GOOGLE_CLIENT_ID=1007479511358-nctc1hf187sb9cf5u5n8ihupihbed9nu.apps.google
 RAZORPAY_KEY_ID='rzp_test_RlsWXNoCbRRxeu'
 RAZORPAY_KEY_SECRET='ic3w197nhum2Su9SRcnSY5Kj'
 RAZORPAY_WEBHOOK_SECRET="new"
+
+API_KEY= '873MIO4DBT9INXVX'
