--- a/src/.env
+++ b/src/.env
@@ -15,4 +15,4 @@ RAZORPAY_KEY_ID='rzp_test_RlsWXNoCbRRxeu'
 RAZORPAY_KEY_SECRET='ic3w197nhum2Su9SRcnSY5Kj'
 RAZORPAY_WEBHOOK_SECRET="new"
 
-API_KEY= '873MIO4DBT9INXVX'
+API_KEY_1= '873MIO4DBT9INXVX'
