--- a/src/.env
+++ b/src/.env
@@ -16,3 +16,11 @@ RAZORPAY_KEY_SECRET='ic3w197nhum2Su9SRcnSY5Kj'
 RAZORPAY_WEBHOOK_SECRET="new"
 
 API_KEY_1= '873MIO4DBT9INXVX'
+
+PGHOST='ep-old-recipe-a8lo8shq-pooler.eastus2.azure.neon.tech'
+PGDATABASE='neondb'
+PGUSER='neondb_owner'
+PGPASSWORD='npg_l1orXOxDT4PF'
+PGPORT=5432
+
+DATABASE_URL='postgresql://neondb_owner:npg_l1orXOxDT4PF@ep-old-recipe-a8lo8shq-pooler.eastus2.azure.neon.tech/neondb?sslmode=require&channel_binding=require'
