login route complete

--- a/src/.env
+++ b/src/.env
@@ -24,3 +24,5 @@ PGPASSWORD='npg_l1orXOxDT4PF'
 PGPORT=5432
 
 DATABASE_URL='postgresql://neondb_owner:npg_l1orXOxDT4PF@ep-old-recipe-a8lo8shq-pooler.eastus2.azure.neon.tech/neondb?sslmode=require&channel_binding=require'
+
+FRONT='http://localhost:3000'
