--- a/src/.env
+++ b/src/.env
@@ -8,8 +8,8 @@ GOOGLE_REDIRECT_URI='http://localhost:4000/auth/google/callback'
 PORT=4000
 SERVER_ROOT='http://localhost:4000'
 
-VITE_API_URL='http://localhost:4000'
-VITE_GOOGLE_CLIENT_ID=1007479511358-nctc1hf187sb9cf5u5n8ihupihbed9nu.apps.googleusercontent.com
+VITE_API_URL='https://ascend-backend-11.onrender.com'
+VITE_GOOGLE_CLIENT_ID='1007479511358-nctc1hf187sb9cf5u5n8ihupihbed9nu.apps.googleusercontent.com'
 
 RAZORPAY_KEY_ID='rzp_test_RlsWXNoCbRRxeu'
 RAZORPAY_KEY_SECRET='ic3w197nhum2Su9SRcnSY5Kj'
