--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ascend",
   "version": "0.1.0",
+  "main":"index.js",
   "private": true,
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
