files fix for deployment

--- a/src/.env
+++ b/src/.env
@@ -8,8 +8,10 @@ GOOGLE_REDIRECT_URI='http://localhost:4000/auth/google/callback'
 PORT=4000
 SERVER_ROOT='http://localhost:4000'
 
-VITE_API_URL='https://ascend-backend-12.onrender.com'
+REACT_APP_API_URL='https://ascend-backend-14.onrender.com'
 VITE_GOOGLE_CLIENT_ID='1007479511358-nctc1hf187sb9cf5u5n8ihupihbed9nu.apps.googleusercontent.com'
+
+REACT_APP_API_URL='https://ascend-backend-14.onrender.com'
 
 RAZORPAY_KEY_ID='rzp_test_RlsWXNoCbRRxeu'
 RAZORPAY_KEY_SECRET='ic3w197nhum2Su9SRcnSY5Kj'
@@ -23,6 +25,7 @@ PGUSER='neondb_owner'
 PGPASSWORD='npg_l1orXOxDT4PF'
 PGPORT=5432
 
+
 DATABASE_URL='postgresql://neondb_owner:npg_l1orXOxDT4PF@ep-old-recipe-a8lo8shq-pooler.eastus2.azure.neon.tech/neondb?sslmode=require&channel_binding=require'
 
-FRONT='http://localhost:3000'
+FRONT='https://ascend-red.vercel.app'
