--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ascend",
   "version": "0.1.0",
-  "main":"index.js",
   "private": true,
+  "main": "index.js",
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
     "@react-oauth/google": "^0.12.2",
@@ -36,6 +36,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "https://ascend-backend-12.onrender.com",
   "eslintConfig": {
     "extends": [
       "react-app",
